# community-v2

./: .env  Cargo.toml  Q&A.md  README.md  api.http  docker-compose.yaml
migrations/: 20240119182200_schema.down.sql  20240119182200_schema.up.sql
src/: config.rs  lib.rs
src/adapter/: event_store_repository.rs  mod.rs  repositories.rs  sql_repository.rs
src/domain/account/: command.rs  errors.rs  mod.rs
src/service/: cross_cutting_trait.rs  mod.rs  response.rs
