[package]
name = "community-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="^0.7.2",features=["macros"]}
axum-extra = {version="*",features=["typed-header"]}

bcrypt = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = {version="0.7.3", features=["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version="*" , features = ["serde", "v4"] }
chrono = {version="0.4", features=["serde"]}
async-trait= "*"

eventstore = { version = "2.3.0" }

[[bin]]
name = "web"
path = "./src/bin/web/main.rs"

[lints.rust]
unsafe_code="forbid"

[sqlx]
migration_dir = "migrations/relational"